name:                  gogol-secretmanager
version:               0.5.0
synopsis:              Google Secret Manager SDK.
homepage:              https://github.com/brendanhay/gogol
bug-reports:           https://github.com/brendanhay/gogol/issues
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2015-2016 Brendan Hay
category:              Network, Google, Cloud
build-type:            Simple
cabal-version:         >= 1.10
extra-source-files:    README.md src/.gitkeep

description:
    Stores sensitive data such as API keys, passwords, and certificates.
    Provides convenience while improving security.
    .
    /Warning:/ This is an experimental prototype/preview release which is still
    under exploratory development and not intended for public use, caveat emptor!
    .
    This library is compatible with version @v1@
    of the API.

source-repository head
    type:     git
    location: git://github.com/brendanhay/gogol.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src gen

    ghc-options:       -Wall

    exposed-modules:
          Network.Google.Resource.SecretManager.Projects.Locations.Get
        , Network.Google.Resource.SecretManager.Projects.Locations.List
        , Network.Google.Resource.SecretManager.Projects.Secrets.AddVersion
        , Network.Google.Resource.SecretManager.Projects.Secrets.Create
        , Network.Google.Resource.SecretManager.Projects.Secrets.Delete
        , Network.Google.Resource.SecretManager.Projects.Secrets.Get
        , Network.Google.Resource.SecretManager.Projects.Secrets.GetIAMPolicy
        , Network.Google.Resource.SecretManager.Projects.Secrets.List
        , Network.Google.Resource.SecretManager.Projects.Secrets.Patch
        , Network.Google.Resource.SecretManager.Projects.Secrets.SetIAMPolicy
        , Network.Google.Resource.SecretManager.Projects.Secrets.TestIAMPermissions
        , Network.Google.Resource.SecretManager.Projects.Secrets.Versions.Access
        , Network.Google.Resource.SecretManager.Projects.Secrets.Versions.Destroy
        , Network.Google.Resource.SecretManager.Projects.Secrets.Versions.Disable
        , Network.Google.Resource.SecretManager.Projects.Secrets.Versions.Enable
        , Network.Google.Resource.SecretManager.Projects.Secrets.Versions.Get
        , Network.Google.Resource.SecretManager.Projects.Secrets.Versions.List
        , Network.Google.SecretManager
        , Network.Google.SecretManager.Types

    other-modules:
          Network.Google.SecretManager.Types.Product
        , Network.Google.SecretManager.Types.Sum

    build-depends:
          gogol-core == 0.5.0.*
        , base       >= 4.7 && < 5
