cabal-version:         2.2
name:                  gogol-secretmanager
version:               1.0.0
synopsis:              Google Secret Manager SDK.
homepage:              https://github.com/brendanhay/gogol
bug-reports:           https://github.com/brendanhay/gogol/issues
license:               MPL-2.0
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay+gogol@gmail.com>
copyright:             Copyright (c) 2015-2022 Brendan Hay
category:              Google
build-type:            Simple
extra-source-files:    README.md src/.gitkeep
description:
    Stores sensitive data such as API keys, passwords, and certificates. Provides convenience while improving security.
  .
  /Warning:/ This is an experimental prototype/preview release which is still
  under exploratory development and not intended for public use, caveat emptor!
  .
  This library is compatible with version @v1@
  of the API.

source-repository head
  type:     git
  location: git://github.com/brendanhay/gogol.git
  subdir:   gogol-secretmanager

flag field-selectors
  description: If record field selectors should be enabled. Disabling this requires GHC >=9.2 and the NoFieldSelectors extension.
  default: False
  manual: True

library
  default-language:  Haskell2010
  hs-source-dirs:    src gen

  ghc-options:
    -Wall
    -fwarn-incomplete-uni-patterns
    -fwarn-incomplete-record-updates
    -funbox-strict-fields
    -fwarn-unused-packages

  if !flag(field-selectors) && impl(ghc >= 9.2)
    default-extensions: NoFieldSelectors

  exposed-modules:
      Gogol.SecretManager
    , Gogol.SecretManager.Projects.Locations.Get
    , Gogol.SecretManager.Projects.Locations.List
    , Gogol.SecretManager.Projects.Secrets.AddVersion
    , Gogol.SecretManager.Projects.Secrets.Create
    , Gogol.SecretManager.Projects.Secrets.Delete
    , Gogol.SecretManager.Projects.Secrets.Get
    , Gogol.SecretManager.Projects.Secrets.GetIamPolicy
    , Gogol.SecretManager.Projects.Secrets.List
    , Gogol.SecretManager.Projects.Secrets.Patch
    , Gogol.SecretManager.Projects.Secrets.SetIamPolicy
    , Gogol.SecretManager.Projects.Secrets.TestIamPermissions
    , Gogol.SecretManager.Projects.Secrets.Versions.Access
    , Gogol.SecretManager.Projects.Secrets.Versions.Destroy
    , Gogol.SecretManager.Projects.Secrets.Versions.Disable
    , Gogol.SecretManager.Projects.Secrets.Versions.Enable
    , Gogol.SecretManager.Projects.Secrets.Versions.Get
    , Gogol.SecretManager.Projects.Secrets.Versions.List
    , Gogol.SecretManager.Types

  other-modules:
      Gogol.SecretManager.Internal.Product
    , Gogol.SecretManager.Internal.Sum

  build-depends:
      gogol-core ^>= 1.0.0
    , base       >=  4.12 && < 5
